--- a/WebAppOO_Taxi/web/WEB-INF/jspf/header.jspf
+++ b/WebAppOO_Taxi/web/WEB-INF/jspf/header.jspf
@@ -1,7 +1,5 @@
 <%@page import="br.com.fatecpg.parking.User"%>
 <%@page pageEncoding="UTF-8"%>
-
-<h2>Hello World!</h2>
 <%
     String path = request.getContextPath();
     String errorMessage = null;
@@ -24,33 +22,48 @@
 %>
 
 <%if(session.getAttribute("user") == null){%>
-<h2>É preciso estar autenticado para acessar esse recurso</h2>
-<form method="post">
-    Login: <input type="text" name="login"/>
-    Senha: <input type="password" name="pass"/>
-    <input type="submit" name="formLogin" value="Entrar"/>
-</form>
+            <script language="JavaScript"> 
+                window.location="login.jsp"; 
+            </script>
 <%} else {%>
-<form>
     <%User user  = (User) session.getAttribute("user"); %>
-    Bem vindo, <%= user.getName() %> [<%= user.getRole() %>]
-    <input type="submit" name="formLogoff" value="Sair"/>
-</form>
-<hr/>
-<h2>
-    <a href="<%= path%>/home.jsp">HOME</a>
-    || <a href="<%= path%>/cadastroPassageiro.jsp">CADASTRO PASSAGEIRO</a>
-    || <a href="<%= path%>/cadastroMotorista.jsp">CADASTRO MOTORISTA</a>
-    || <a href="<%= path%>/cadastroCorrida.jsp">SOLICITAR CORRIDA</a>
-</h2>
-    <%if (user.getRole().equals("ADMIN")){%>
-    <fieldset>
-        <legend>Funções administrativa</legend>
-        <a href="<%= path%>/cadastroUsuario.jsp">CADASTRO USUARIO</a>
-        || <a href="<%= path%>/listarCorridas.jsp">LISTAR CORRIDAS</a>
-        || <a href="<%= path%>/listarPassageiros.jsp">LISTAR PASSAGEIROS</a>
-        || <a href="<%= path%>/listarMotoristas.jsp">LISTAR MOTORISTAS</a>
-    </fieldset>
-    
-<%}}%>
-<hr/>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Sistema Taxi 24H</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li><a class="nav-link" href="<%= path%>/home.jsp">HOME</a></li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Cadastros
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="<%= path%>/cadastroPassageiro.jsp">Cadastro Passageiro</a>
+                    <a class="dropdown-item" href="<%= path%>/cadastroMotorista.jsp">Cadastro Motorista</a>
+                </div>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="<%= path%>/cadastroCorrida.jsp">Solicitar Corrida</a></li>
+            <%if (user.getRole().equals("ADMIN")){%>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Funções administrativas
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="<%= path%>/cadastroUsuario.jsp">Cadastro Usuario</a>
+                    <a class="dropdown-item" href="<%= path%>/listarCorridas.jsp">Listar Corridas</a>
+                    <a class="dropdown-item" href="<%= path%>/listarPassageiros.jsp">Listar Passageiros</a>
+                    <a class="dropdown-item" href="<%= path%>/listarMotoristas.jsp">Listar Motoristas</a>
+                </div>
+            </li>
+            <%}%>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+            Bem vindo, <%= user.getName() %> [<%= user.getRole() %>]
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" name="formLogoff">Sair</button>
+        </form>
+    </div>
+</nav>
+<%}%>
